Bug 1385666 - Ensure layout is flushed when editor gets focus. r=masayuki, a=lizzard

--HG--
extra : source : fc490a4565fc694307b634599fc2516aa11a6687